tests/baselines/reference/mixedTypeEnumComparison.errors.txt
tests/cases/compiler/mixedTypeEnumComparison.ts(11,5): error TS2365: Operator '>' cannot be applied to types 'number' and 'E'.


==== tests/cases/compiler/mixedTypeEnumComparison.ts (1 errors) ====
    const enum E {
        S1 = "foo",
        S2 = "bar",
        
        N1 = 1000,
        N2 = 25,
    }
    
    declare var someNumber: number
    
    if (someNumber > E.N2) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'E'.
        someNumber = E.N2;
    }
    
    declare var someString: string
    
    if (someString > E.S1) {
        someString = E.S2;
    }
    
    